implemented frontend post insertion procedures